# oasis

./: .gitreview  CONTRIBUTING.rst  README.rst  oasis-db-manage.py  oasisapi.py  oasisconductor.py  requirements.txt  setup.cfg  setup.py
devstack/: plugin.sh
devstack/lib/: oasis
doc/source/: conf.py  index.rst  template.rst
etc/oasis/: api-paste.ini  oasis-config-generator.conf  oasis.conf  policy.json
oasis/: __init__.py  opts.py  version.py
oasis/agent/: api.py
oasis/api/: app.py  config.py  hooks.py  utils.py
oasis/api/controllers/: base.py  link.py  root.py  versions.py
oasis/api/controllers/v1/: __init__.py  httpapi.py  (+11 more)
oasis/api/middleware/: __init__.py  auth_token.py  parsable_error.py
oasis/cmd/: api.py  conductor.py  db_manage.py  template_manage.py
oasis/common/: clients.py  config.py  exception.py  keystone.py  paths.py  policy.py  rpc.py  rpc_service.py  service.py  short_id.py  utils.py
oasis/conductor/: api.py  config.py  scale_manager.py  template_definition.py  utils.py
oasis/conductor/handlers/: conductor_listener.py  function_conductor.py  nodepool_conductor.py
oasis/db/: __init__.py  api.py  migration.py
oasis/db/sqlalchemy/: alembic.ini  api.py  migration.py  models.py
oasis/objects/: __init__.py  base.py  endpoint.py  fields.py  function.py  httpapi.py  nodepool.py  nodepool_policy.py  request.py  requestheader.py  response.py  responsecode.py  responsemessage.py  utils.py
oasis/service/: periodic.py
oasis/servicegroup/: oasis_service_periodic.py
oasis/templates/: sample.yaml  server-node.yaml  server-nodepool.yaml
(+9 files in other folders)
