[metadata]
name = oasis
summary = OpenStack Boilerplate contains all the boilerplate you need to create an OpenStack package.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    oasis-api = oasis.cmd.api:main
    oasis-db-manage = oasis.cmd.db_manage:main

oslo.config.opts =
    oasis = oasis.opts:list_opts

oslo.config.opts.defaults =
    oasis = oasis.common.config:set_cors_middleware_defaults

oasis.database.migration_backend =
    sqlalchemy = oasis.db.sqlalchemy.migration